# methods_for_solving_the_eigenvalue_problem

./: CMakeLists.txt  Rayleigh_relation.cpp  find_eigenvalues.cpp  is_degenerate.cpp  main.cpp  main.h  multiplication.cpp  norm.cpp  normalization.cpp  print_slae.cpp  reverse_iteration_method.cpp  reverse_traverse.cpp  subtraction.cpp  to_Hessenberg_shape.cpp  transposition.cpp
QR_method/: QR_method.cpp  QR_method.h  create_matrix.cpp
TEST/: D0.TXT  D2.txt
parser/: parser.cpp  parser.h
